# cpmdc

./: .gitignore  CHANGELOG.md  README.md  meson.build  meson_options.txt  pixi.toml  prek.toml
.github/workflows/: ci.yml
docs/: export.el
docs/newsfragments/: README.md
docs/orgmode/: index.org
docs/orgmode/contributing/: index.org
docs/orgmode/contributing/developer/: release.org
docs/orgmode/howto/: embedding.org
docs/orgmode/reference/: architecture.org  cpmd-options.org
docs/orgmode/tutorials/: quickstart.org
docs/source/: Doxyfile_cpmdc.cfg  changelog.rst  conf.py  index.rst
docs/source/_static/: custom.css
docs/source/_templates/partials/: extra-head.html
docs/source/api/: enum_CPMDCFeatureKind.rst  global.rst  struct_CPMDCFeatureEntry.rst  struct_CPMDCResult.rst
docs/source/contributing/: index.rst
docs/source/contributing/developer/: release.rst
docs/source/howto/: embedding.rst
docs/source/reference/: architecture.rst  cpmd-options.rst
docs/source/tutorials/: quickstart.rst
examples/: host_step.c
include/: cpmdc.h  cpmdc_features.h
schema/: Potentials.capnp
schema/inventory/: cpmd_cp_keywords.txt  cpmd_features.json  dft_functionals.txt  opencpmd_sections.txt
src/: cpmd_embed_c_api.F90  cpmd_embed_c_api.f90  cpmd_embed_config.h  cpmd_stop_intercept.c  cpmdc.c  cpmdc_features.c  cpmdc_params.c  cpmdc_params.h  cpmdc_stub.c
tests/: cpmd_params_parser.capnp.txt  cpmd_params_session_alt.capnp.txt  force_input_step_ev.capnp.txt  force_input_water.capnp.txt  params_atoms_default_directives.capnp.txt  params_atoms_silicon.capnp.txt  params_cp_md.capnp.txt  params_cpmd_dynamics.capnp.txt  params_cpmd_geometry.capnp.txt  params_cpmd_misc.capnp.txt  params_dft_functionals.capnp.txt  params_dft_scalars.capnp.txt  params_effective_config_sections.capnp.txt  params_effective_config_top.capnp.txt  params_escape_generic.capnp.txt  params_long_tail_sections.capnp.txt  params_set_directives.capnp.txt  params_system_bad_occupation.capnp.txt  params_system_cdft_acceptor_wmult.capnp.txt  params_system_cell_qualifiers.capnp.txt  params_system_cell_vectors.capnp.txt  params_system_controls.capnp.txt  params_system_couplings_linres.capnp.txt  params_system_couplings_lists.capnp.txt  params_system_couplings_prod.capnp.txt  params_system_kpoints_bands.capnp.txt  params_system_kpoints_monkhorst.capnp.txt  params_vdw_controls.capnp.txt  test_atoms_symbols.c  test_capnp_drives_config.c  test_capnp_parser.c  test_cpmd_base_keyword_inventory.py  test_cpmd_embedding_docs_coverage.py  test_cpmd_escape_hatch_coverage.py  test_cpmd_long_tail_section_coverage.py  test_cpmd_option_token_coverage.py  test_cpmd_params_field_inventory.py  test_cpmd_public_abi_inventory.py  test_cpmd_public_header_docs_coverage.py  test_cpmd_schema_render_coverage.py  (+21 more)
tests/cmocka/: test_params_render_cmocka.c  test_set_directives_render.c
tools/: check_feature_inventory.py  cpmd_root_probe.py  opencpmd_keep_fion.patch
